[tool.poetry]
name = "fragment-downloader"
version = "1.0.0"
description = ""
authors = ["Andreas Kruck <andreas@kruck.cc>"]
readme = "README.md"
packages = [{include = "fragment_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pathlib = "^1.0.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core>=1.1.15"]
build-backend = "poetry.core.masonry.api"
